[package]
name = "dosc-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
cached = "0.26.2"
chrono = "0.4.19"
levenshtein = "1.0.5"
once_cell = "1.9.0"
rayon = "1.5.1"
rustc-hash = "1.1.0"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.72"
smol_str = "0.1.21"
strsim = "0.10.0"
tap = "1.0.1"
